--- a/GOPRO2_Team1/Config/DefaultInput.ini
+++ b/GOPRO2_Team1/Config/DefaultInput.ini
@@ -104,6 +104,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Grappling Hook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Move",Scale=-1.000000,Key=A)
