--- a/GOPRO2_Team1/Config/DefaultEngine.ini
+++ b/GOPRO2_Team1/Config/DefaultEngine.ini
@@ -4,15 +4,15 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Maps/Test.Test
+EditorStartupMap=/Game/Game/Maps/Menu.Menu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Game/Maps/Test.Test
-ServerDefaultMap=/Engine/Maps/Entry
+GameInstanceClass=/Game/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
+GameDefaultMap=/Game/Game/Maps/Menu.Menu
+ServerDefaultMap=/Game/Game/Maps/Menu.Menu
 GlobalDefaultGameMode=/Game/Game/Gamemode/GM_SideScroller.GM_SideScroller_C
 GlobalDefaultServerGameMode=None
 
@@ -240,4 +240,17 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
