--- a/GOPRO2_Team1/Config/DefaultInput.ini
+++ b/GOPRO2_Team1/Config/DefaultInput.ini
@@ -106,6 +106,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Grappling Hook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=J)
++ActionMappings=(ActionName="Propulsion Boots",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="Motivate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Move",Scale=1.000000,Key=Right)
 +AxisMappings=(AxisName="Move",Scale=-1.000000,Key=A)
